// Copyright 2017 The Chromium Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package admin;

// Reporter implements the internal reporter API.
service Reporter {

  // ReportResults reports Tricium results.
  rpc ReportResults(ReportResultsRequest) returns (ReportResultsResponse);
}

message ReportResultsRequest {
  int64 run_id = 1;
  string analyzer = 2;
}

message ReportResultsResponse {
}
